Initial commit JavaFx